@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,0,12
-#define PRODUCTVER     0,3,0,12
-#define STRFILEVER     _T("0.3.0.12")
-#define STRPRODUCTVER  _T("0.3.0.12")
-#define STRPRODUCTDATE  _T("2007-12-11")
+#define FILEVER        0,3,0,24
+#define PRODUCTVER     0,3,0,24
+#define STRFILEVER     _T("0.3.0.24")
+#define STRPRODUCTVER  _T("0.3.0.24")
+#define STRPRODUCTDATE  _T("2008-02-02")
 #endif // AUTOBUILD_H
